tests/integration/telemetry/testdata/istio-mtls-http-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: mtls-http
      protocol: HTTPS
    hosts:
    - fake.external.com
    tls:
      mode: ISTIO_MUTUAL
