tests/integration/telemetry/testdata/istio-mtls-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: direct-cnn-through-egress-gateway
spec:
  hosts:
    - server.default.svc
  gateways:
    - istio-egressgateway
    - mesh
  tls:
    - match:
        - gateways:
            - mesh
          port: 443
          sniHosts:
            - server.default.svc
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            port:
              number: 443
  tcp:
    - match:
        - gateways:
            - istio-egressgateway
          port: 443
      route:
        - destination:
            host: external.{{.Namespace}}.svc.cluster.local
            port:
              number: 443
